# cookiecutter-python-library

./: .gitignore  Pipfile  README.md  cookiecutter.json  pytest.ini
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .pdm.toml  Makefile  Pipfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: python-tests.yml
{{cookiecutter.project_slug}}/notebooks/: analysis_example.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: __init__.py  app.py  main.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.pkg_name}}/: test_app.py  test_main.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_module}}/: test_app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_module}}/: main.py
