[tool.pdm]
allow_prereleases = false

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-datadir",
    "pytest-cov",
    "pytest-html",
    "pytest-mock",
    "pytest-faker",
    "pytest-print",
    "mypy>=1.0.1",
    "ruff",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">={{cookiecutter.python_version}}"
dependencies = ["loguru"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = "env PYTHONPATH=.:$PYTHONPATH pytest --cov={{ cookiecutter.pkg_name }} tests/ --print"


[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "C90", # mccabe
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C40", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

unfixable = ["B"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "venv",
    "tests",
]

# Never enforce line length violations.
ignore = ["E501"]

# Always generate Python {{ cookiecutter.python_version}} compatible code.
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

# Same as Black.
line-length = 88


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"./tests/**" = ["S101"]  # Allow use of assert in tests


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
ignore_missing_imports = true
mypy_path = "{{ cookiecutter.pkg_name }}"

[mypy-pytest]
ignore_missing_imports = true
